$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document

MIDIboxSEQ V4.079
~~~~~~~~~~~~~~~~~

   o groove page: added possibility to change the intensity for all tracks at once


MIDIboxSEQ V4.078
~~~~~~~~~~~~~~~~~

   o removed MSD (mass storage device) mode to save some memory.
     With the MIOS Filebrowser (integrated into MIOS Studio) this mode has a good
     replacement meanwhile. For direct access to the SD Card another application (like
     MIDIO128) could be temporary uploaded... or the SD Card can be plugged into
     a common SD Card reader.

   o Options page has been overworked, so that more options can be added in future

   o experimental: if Live mode or a MIDI Router based "Track" or "Sel.Trk" is active,
     and Note, CC, PitchBender, Program Change is received on the selected IN Port,
     the corresponding track layer (or LFO CC) will be muted completely, or temporary for
     a given number of steps.
     This allows to temporary overrule events generated by the sequencer from
     an external MIDI keyboard or controller.
     This feature has to be configured in the UTILITY->Options page, it's disabled by default!

   o activate the ALL function (press ALL button) in the mute page to get a new 
     menu page which allows to mute/unmute all tracks, layers of current track or 
     mute&layers of all tracks.
     Sidenote: this obsoletes the UTILITY->MUTE and UNMUTE function, which might
     be replaced by something else in future.

   o the 6 new mute/unmute functions are now also accessible from dedicated buttons
     (and LEDs). They have to be assigned in the MBSEQ_HW.V4 file.

   o it's now possible to control the track mutes via CCs.
     The first CC (for the first track) has to be configured in the MENU->MIDI->Ext.Ctrl
     page. The remaining tracks are controlled from the 15 consecutive CCs.
     E.g. if the CC number is set to 16, the mutes of track 1-16 are controlled with