@@ -33,7 +33,7 @@ static const seq_ui_page_t shortcut_menu_pages[16] = {
   SEQ_UI_PAGE_FX_HUMANIZE, // GP2
   SEQ_UI_PAGE_FX_LIMIT,    // GP3
   SEQ_UI_PAGE_FX_LFO,      // GP4
-  SEQ_UI_PAGE_NONE,        // GP5
+  SEQ_UI_PAGE_FX_DUPL,     // GP5
   SEQ_UI_PAGE_NONE,        // GP6
   SEQ_UI_PAGE_NONE,        // GP7
   SEQ_UI_PAGE_NONE,        // GP8
@@ -130,8 +130,8 @@ static s32 LCD_Handler(u8 high_prio)
   SEQ_LCD_PrintSpaces(20);
 
   SEQ_LCD_CursorSet(0, 1);
-  SEQ_LCD_PrintString("Echo Hum. Limit LFO ");
-  SEQ_LCD_PrintSpaces(20);
+  SEQ_LCD_PrintString("Echo Hum. Limit LFO Dupl.");
+  SEQ_LCD_PrintSpaces(15);
   SEQ_LCD_PrintString("Loop Scale");
   SEQ_LCD_PrintSpaces(30);
 
