@@ -8,6 +8,12 @@ Wishlist for future features
 MIDIboxSEQ V4.079
 ~~~~~~~~~~~~~~~~~
 
+   o added new Fx which allows to send to one or more additional MIDI channels from
+     a single track with various behaviours (forward to all, alternate between channels,
+     randomly select channel)
+
+     The new functions can be configured at the Fx->Dupl (like Duplicate) page
+
    o groove page: added possibility to change the intensity for all tracks at once
 
 
